--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -12,3 +12,12 @@
   display: inline;
   margin: 0 15px;
 }
+
+/* Header/Logo Title */
+.bheader {
+  padding: 60px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
