all functons working

--- a/src/styles/blogDetail.module.css
+++ b/src/styles/blogDetail.module.css
@@ -37,7 +37,7 @@
 /* Blog Content Styling */
 .blogContent {
   line-height: 1.8;
-  color: #333;
+  color: #2b2a2a;
   font-size: 18px;
   margin-bottom: 30px;
 }
